Fix issue with broken styles on browser zoom

--- a/resources/stylesheets/component/common/mobile-featured-actions-button.less
+++ b/resources/stylesheets/component/common/mobile-featured-actions-button.less
@@ -19,6 +19,7 @@
 			content: "\e9f7";
 			font-weight: 700;
 			font-size: 1.5625rem !important;
+			line-height: 3rem;
 			font-style: normal;
 		}
 	}
