--- a/resources/stylesheets/component/common/pageheader.categories.less
+++ b/resources/stylesheets/component/common/pageheader.categories.less
@@ -8,6 +8,7 @@
 
 		.bs-category-add-category {
 			font-size: 0.75rem;
+			line-height: 1.25rem;
 			color: @link-color;
 			display: block;
 			min-height: 1rem;
@@ -39,7 +40,15 @@
 			flex-wrap: wrap;
 		}
 
-
+		.bs-category-container-add-category {
+			.x-form-text-default .x-tagfield-item {
+				border: 1px solid @bs-color-neutral3;
+				border-radius: 1.25rem;
+				background-color: white;
+				margin-left: 0.3125rem;
+				font-size: 0.75rem;
+			}
+		}
 
 		a {
 			white-space: nowrap;
@@ -51,6 +60,7 @@
 				background-color: white;
 				margin-left: 0.3125rem;
 				font-size: 0.75rem;
+				line-height: 1.25rem;
 			}
 
 			&:hover {
