--- a/resources/stylesheets/component/tablet/aside.navigation-main.less
+++ b/resources/stylesheets/component/tablet/aside.navigation-main.less
@@ -26,7 +26,7 @@
 					span {
 						display: inline-flex;
 						justify-content: space-between;
-						width: calc(~"100% 0.5625rem");
+						width: calc(~"100% - 0.5625rem");
 						line-height: 3rem;
 
 						&::after {
